# swarmap

./: .gitignore  README.md  docker-compose.yml  requirements.txt  run.sh  tasks.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/: demo_script.md  topic_naming.md  troubleshooting.md
matlab/: README.md
matlab/src/: ExportResults.m  FrontierExplorer.m  MapGenerator.m  MapMerger.m  ROS2Bridge.m  RunBenchmarks.m  RunBenchmarksSmoke.m  SwarmSimulator.m
matlab/tests/: TestFrontierExplorer.m  TestMapGenerator.m  TestMapMerger.m  TestSwarmSimulator.m
plans/: 00_overview.md  01_environment_setup.md  02_ros2_packages.md  03_robot_node.md  04_frontier_exploration.md  05_map_merging.md  06_fault_tolerance.md  07_dashboard_backend.md  08_dashboard_frontend.md  09_matlab_simulation.md  10_integration_testing.md  11_demo_scenarios.md  PROJECT_GUIDE.md  README.md  USAGE.md  dashboard.md  features.md  novel.md  slide_brief.md
plans/Laksha/: TEST_REPORT.md
results/: README.md
scripts/: bootstrap.sh  run_demos.sh
scripts/benchmarks/: fault_tolerance_validation.py  perf_scalability.sh  perf_throughput.py  plot_coverage.py
src/swarmap_bringup/: CMakeLists.txt  package.xml
src/swarmap_bringup/config/: default_params.yaml  rosbridge_params.yaml
src/swarmap_bringup/launch/: dashboard.launch.py  demo_basic.launch.py  demo_fault_tolerance.launch.py  simulation.launch.py
src/swarmap_bringup/models/diff_drive_robot/: model.sdf
src/swarmap_bringup/rviz/: swarm_debug.rviz
src/swarmap_bringup/test/: test_failure_recovery.py  test_frontier_auction.py  test_map_merge.py  test_two_robots.py
src/swarmap_bringup/urdf/: diff_drive_robot.urdf.xacro
src/swarmap_bringup/worlds/: large_office.sdf  warehouse.sdf
src/swarmap_core/: CMakeLists.txt  package.xml
src/swarmap_core/include/swarmap_core/: frontier_explorer.hpp  map_merger.hpp  neighbour_tracker.hpp  occupancy_grid.hpp  path_planner.hpp
src/swarmap_core/src/: dashboard_bridge_node.py  failure_injector_node.cpp  frontier_explorer.cpp  map_aggregator_node.cpp  map_merger.cpp  neighbour_tracker.cpp  occupancy_grid.cpp  param_service_node.py  path_planner.cpp  robot_node.cpp  robot_spawner_node.py  swarm_monitor_node.py  world_sim_node.py
src/swarmap_core/test/: test_auction.cpp  test_frontier.cpp  test_grid.cpp  test_merger.cpp
src/swarmap_dashboard/: CMakeLists.txt  index.html  package-lock.json  package.json  package.xml  vite.config.ts
src/swarmap_dashboard/src/: App.tsx  colors.ts  index.css  roslib.d.ts
src/swarmap_dashboard/src/components/: ControlPanel.tsx  MapCanvas.tsx  NetworkGraph.tsx  ReplayPanel.tsx  StatsPanel.tsx
src/swarmap_dashboard/src/hooks/: useRosBridge.ts
src/swarmap_msgs/: CMakeLists.txt  package.xml
src/swarmap_msgs/msg/: FrontierBid.msg  NeighbourDiscovery.msg  PartialMap.msg  RobotStatus.msg
