<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarmap_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and world assets for the MARS swarm system</description>
  <maintainer email="lakshasri@mars.local">Lakshasri S</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>swarmap_core</exec_depend>
  <exec_depend>swarmap_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
